Edit modal hover space

--- a/index.html
+++ b/index.html
@@ -138,29 +138,28 @@
                     <div class="shadow portfolio-item team-item">
                         <a class="portfolio-link" data-toggle="modal" href="#ngamwongwan-team">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/Ngamwongwan.gif" alt="Ngamwonwan Branch" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/Ngamwongwan.gif" alt="" />
-
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">สาขางามวงศ์วาน</div>
+                                <div class="portfolio-caption-subheading text-muted">Ngamwongwan Branch</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">สาขางามวงศ์วาน</div>
-                            <div class="portfolio-caption-subheading text-muted">Ngamwongwan Branch</div>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                     <div class="shadow portfolio-item team-item">
                         <a class="portfolio-link" data-toggle="modal" href="#bangna-team">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/Bangna.gif" alt="Bangna Branch" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/Bangna.gif" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">สาขาบางนา</div>
+                                <div class="portfolio-caption-subheading text-muted">Bangna Branch</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">สาขาบางนา</div>
-                            <div class="portfolio-caption-subheading text-muted">Bangna Branch</div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -512,14 +511,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/pedodontics.jpg" alt="Pedodontics" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/pedodontics.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ทันตกรรมเด็ก</div>
+                                <div class="portfolio-caption-subheading text-muted">Pedodontics</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ทันตกรรมเด็ก</div>
-                            <div class="portfolio-caption-subheading text-muted">Pedodontics</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Root canal-->
@@ -527,14 +526,15 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/endodontics.jpg" alt="Endodontics/Root canal treatment" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/endodontics.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">การรักษาคลองรากฟัน</div>
+                                <div class="portfolio-caption-subheading text-muted">Endodontics/Root canal treatment
+                                </div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">การรักษาคลองรากฟัน</div>
-                            <div class="portfolio-caption-subheading text-muted">Endodontics/Root canal treatment</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Prosthodontics-->
@@ -542,14 +542,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/prosthodontics.jpg" alt="Prosthodontics" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/prosthodontics.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ทันตกรรมประดิษฐ์</div>
+                                <div class="portfolio-caption-subheading text-muted">Prosthodontics</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ทันตกรรมประดิษฐ์</div>
-                            <div class="portfolio-caption-subheading text-muted">Prosthodontics</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Implant-->
@@ -557,14 +557,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/dentalimplant.jpg" alt="Dental Implant" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/dentalimplant.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ทันตกรรมรากฟันเทียม</div>
+                                <div class="portfolio-caption-subheading text-muted">Dental Implant</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ทันตกรรมรากฟันเทียม</div>
-                            <div class="portfolio-caption-subheading text-muted">Dental Implant</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Cosmetic-->
@@ -572,14 +572,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/cosmetic.jpg" alt="Cosmetic Dentistry" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cosmetic.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ทันตกรรมตกแต่ง</div>
+                                <div class="portfolio-caption-subheading text-muted">Cosmetic Dentistry</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ทันตกรรมตกแต่ง</div>
-                            <div class="portfolio-caption-subheading text-muted">Cosmetic Dentistry</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Teeth Whitening-->
@@ -587,14 +587,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/teethwhitening.jpg" alt="Teeth Whitening" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/teethwhitening.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ฟอกสีฟัน</div>
+                                <div class="portfolio-caption-subheading text-muted">Teeth Whitening</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ฟอกสีฟัน</div>
-                            <div class="portfolio-caption-subheading text-muted">Teeth Whitening</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Periodontics-->
@@ -602,14 +602,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/periodontics.jpg" alt="Periodontics" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/periodontics.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ทันตกรรมปริทันต์</div>
+                                <div class="portfolio-caption-subheading text-muted">Periodontics</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ทันตกรรมปริทันต์</div>
-                            <div class="portfolio-caption-subheading text-muted">Periodontics</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Oral Surgery-->
@@ -617,14 +617,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/oral-surgery.jpg" alt="Oral Surgery" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/oral-surgery.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ศัลยกรรมช่องปาก</div>
+                                <div class="portfolio-caption-subheading text-muted">Oral Surgery</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ศัลยกรรมช่องปาก</div>
-                            <div class="portfolio-caption-subheading text-muted">Oral Surgery</div>
-                        </div>
                     </div>
                 </div>
                 <!-- Orthodontics-->
@@ -632,14 +632,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/orthodontics.jpg" alt="Orthodontics" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/orthodontics.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ทันตกรรมจัดฟัน</div>
+                                <div class="portfolio-caption-subheading text-muted">Orthodontics</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">ทันตกรรมจัดฟัน</div>
-                            <div class="portfolio-caption-subheading text-muted">Orthodontics</div>
-                        </div>
                     </div>
                 </div>
                 <!-- X-ray-->
@@ -647,14 +647,14 @@
                     <div class="shadow portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal10">
                             <div class="portfolio-hover">
+                                <img class="img-fluid portfolio-img" src="assets/img/portfolio/xray.jpg" alt="" />
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/xray.jpg" alt="" />
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">เอกซเรย์</div>
+                                <div class="portfolio-caption-subheading text-muted">Computer X-ray</div>
+                            </div>
                         </a>
-                        <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">เอกซเรย์</div>
-                            <div class="portfolio-caption-subheading text-muted">Computer X-ray</div>
-                        </div>
                     </div>
                 </div>
             </div>
