--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <div class="card-header" id="headingEight">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                                ทันตกรรมรากเทียม (Implant)
+                                ทันตกรรมรากฟันเทียม (Implant)
                             </button>
                         </h5>
                     </div>
@@ -531,7 +531,7 @@
                             </div>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">การรักษาคลองรากฟัน</div>
-                                <div class="portfolio-caption-subheading text-muted">Endodontics/Root canal treatment
+                                <div class="portfolio-caption-subheading text-muted">Endodontics
                                 </div>
                             </div>
                         </a>
@@ -1617,7 +1617,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">การรักษาคลองรากฟัน</h2>
-                                <p class="item-intro text-muted text-center">Endodontics/Root canal treatment</p>
+                                <p class="item-intro text-muted text-center">Endodontics</p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/endodontics.jpg" alt="" />
                                 <p class="mt-2">ฟันที่ผุจนลึกเข้าไปใกล้โพรงประสาทฟัน หรือฟันแตกหัก มีรอยร้าวจากการบดเคี้ยว หรือการเกิดอุบัติเหตุ ทำให้เชื้อแบคทีเรียในน้ำลาย เข้าไปทำอันตรายต่อประสาทฟัน นอกจากนี้โรคเหงือกอักเสบเรื้อรัง หรือฟันที่ถูกกระแทกอย่างแรง ก็มีผลทำให้ประสาทฟันตายได้
                                     ซึ่งจะเกิดอาการเสียวฟัน หรือปวดฟันเป็นๆ หายๆ หรือปวดอย่างรุนแรงจนนอนไม่ได้ หรือเหงือกบวม การตรวจ และเอกซเรย์ฟัน จะช่วยให้วินิจฉัยได้ถูกต้องยิ่งขึ้น</p>
