--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <i class="fas fa-user-md fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="about-button-heading mt-3 mb-0">เชี่ยวชาญ</h4>
-                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Expertise</h4>
+                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Proficient</h4>
                     <div class="collapse" id="expertise">
                         <div class="card card-body pt-0"></div>
                         <p class="text-muted">ศูนย์ทันตกรรม พีดีซี ประกอบด้วยทีมงานทันตแพทย์เฉพาะทางและทันตแพทย์ที่มีประสบการณ์ รวมทั้งพนักงานที่มีประสบการณ์และได้รับการฝึกอบรมพัฒนาอย่างต่อเนื่อง ร่วมให้การรักษาและการบริการที่ดีที่สุดแก่คนไข้ และสิ่งสำคัญ ที่สุดคือศูนย์ทันตกรรมของเราดูแลคนไข้ทุกคนเสมือนคนในครอบครัวของเรา
