--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                     </div>
                     <div id="faq3" class="collapse" aria-labelledby="headingThree" data-parent="#accordionFAQ">
                         <div class="card-body">
-                            <ul class="list-inline">
+                            <ul>
                                 <li>
                                     <p><b>ทำความสะอาดฟันและช่องปากของลูกเป็นประจำ</b> คุณพ่อคุณแม่ควรดูแลให้ลูกแปรงฟันอย่างน้อยวันละ 2 ครั้ง ด้วยการวางขนแปรงตั้งฉากกับตัวฟัน แล้วขยับหน้า-หลัง ให้แปรงทั้งด้านนอกและด้านในของฟันทุกซี่ และควรใช้ไหมขัดฟัน ทำความสะอาดซอกฟันทุกวัน
                                         วันละ 1 ครั้ง หลังแปรงฟันก่อนนอน คุณพ่อคุณแม่ควรช่วยลูกแปรงฟันส่วนที่ลูกยังแปรงไม่สะอาด
@@ -754,23 +754,26 @@
                         <div class="card-body">
                             <p>โดยปกติแล้วหากไม่มีปัญหาที่ไม่คาดคิดเกิดขึ้น การจัดฟันมักดำเนินไปตามแผนการรักษาที่ได้วางไว้ ระยะเวลาที่ใช้จริงจึงมักใกล้เคียงกับเวลาที่ได้ประมาณไว้ ซึ่งอาจแตกต่างกันไปในแต่ละคน แต่ปกติจะอยู่ระหว่าง 24 – 36 เดือน ค่าใช้จ่ายก็จะขึ้นอยู่กับระยะเวลาที่จะต้องใช้ในการจัดฟันสำหรับคนไข้แต่ละราย
                                 ซึ่งมักขึ้นอยู่กับหลายปัจจัย เช่น</p>
-                            <ul class="list-inline">
+                            <ul>
                                 <li>
-                                    <p><b> ความซับซ้อนของปัญหาการสบฟันของแต่ละคน</b> ซึ่งทำให้การจัดฟันมีความยากง่ายแตกต่างกัน นอกจากนี้แม้ปัญหาคล้ายคลึงกัน แต่การตอบสนองของฟันต่อเครื่องมือก็อาจแตกต่างกันในแต่ละคนด้วย
-                                    </p>
+                                    <b> ความซับซ้อนของปัญหาการสบฟันของแต่ละคน</b> ซึ่งทำให้การจัดฟันมีความยากง่ายแตกต่างกัน นอกจากนี้แม้ปัญหาคล้ายคลึงกัน แต่การตอบสนองของฟันต่อเครื่องมือก็อาจแตกต่างกันในแต่ละคนด้วย
                                 </li>
                                 <li>
-                                    <p><b>อายุของคนไข้</b> คนไข้ที่อายุน้อย กระดูกโครงสร้างฟันและขากรรไกรจะปรับตัวตามการจัดฟันได้ง่าย ทำให้ฟันขยับได้เร็วกว่าคนที่อายุมาก
-                                    </p>
+                                    <b>อายุของคนไข้</b> คนไข้ที่อายุน้อย กระดูกโครงสร้างฟันและขากรรไกรจะปรับตัวตามการจัดฟันได้ง่าย ทำให้ฟันขยับได้เร็วกว่าคนที่อายุมาก
+
                                 </li>
                                 <li>
-                                    <p><b>ความร่วมมือของผู้รับการจัดฟัน</b> ซึ่งเป็นส่วนสำคัญที่สุดที่จะมีผลต่อความสำเร็จของการจัดฟัน
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <p>การรักษาความสะอาดของฟันและเครื่องมือจัดฟัน เนื่องจากฟันจะเคลื่อนตัวได้ดีในสภาพเหงือกที่สะอาดแสะสมบูรณ์
-                                            </p>
+                                    <b>ความร่วมมือของผู้รับการจัดฟัน</b> ซึ่งเป็นส่วนสำคัญที่สุดที่จะมีผลต่อความสำเร็จของการจัดฟัน
+
+                                    <ul>
+                                        <li><u>การรักษาความสะอาดของฟันและเครื่องมือจัดฟัน</u> เนื่องจากฟันจะเคลื่อนตัวได้ดีในสภาพเหงือกที่สะอาดแสะสมบูรณ์
                                         </li>
+                                        <li><u>การรักษาเครื่องมือจัดฟันให้อยู่ในสภาพดี</u> ไม่ให้หลุดหรือบิดเบี้ยวไปจากสภาพเดิม โดยการระมัดระวังในเรื่องการรับประทานอาหาร หลีกเลี่ยงอุปนิสัยที่ไม่ดีบางประการ เช่นการดูดนิ้ว กัดเล็บ กัดปากกา และระมัดระวังในการเล่นกีฬา
+                                            หรือเครื่องดนตรีชนิดเป่า
+                                        </li>
+                                        <li><u>การมาปรับเครื่องมือสม่ำเสมอ</u> ตามเวลานัดทุกเดือนจนกว่าจะเสร็จสิ้นการรักษา
+                                        </li>
+                                        <li><u>การปฏิบัติตามคำแนะนำโดยเคร่งครัด</u> เช่น การคล้องยางดึงฟัน หรือการใส่อุปกรณ์เสริมพิเศษ เป็นต้น</li>
                                     </ul>
                                 </li>
 
