--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class=" container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase mb-0">Our Amazing Team</h2>
-                <h3 class="section-subheading-normal ">ทีมแพทย์เฉพาะทางของเรา</h3>
+                <h3 class="section-subheading-normal ">ทีมทันตแพทย์เฉพาะทางของเรา</h3>
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-lg-6 mb-4">
@@ -142,8 +142,8 @@
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">สาขางามวงศ์วาน</div>
-                                <div class="portfolio-caption-subheading text-muted">Ngamwongwan Branch</div>
+                                <div class="portfolio-caption-heading">ทันตแพทย์สาขางามวงศ์วาน</div>
+                                <div class="portfolio-caption-subheading text-muted">Ngamwongwan Branch Team</div>
                             </div>
                         </a>
                     </div>
@@ -156,8 +156,8 @@
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">สาขาบางนา</div>
-                                <div class="portfolio-caption-subheading text-muted">Bangna Branch</div>
+                                <div class="portfolio-caption-heading">ทันตแพทย์สาขาบางนา</div>
+                                <div class="portfolio-caption-subheading text-muted">Bangna Branch Team</div>
                             </div>
                         </a>
                     </div>
