--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,8 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-10 text-left">
                             <div class="modal-body">
+                                <h2 class="text-uppercase text-center">ทันตแพทย์สาขางามวงศ์วาน</h2>
+                                <p class="item-intro text-muted text-center mb-5">Ngamwongwan Branch Team</p>
                                 <!-- General-->
                                 <div class="dentist-group">
                                     <h5 class="mb-4">ทันตกรรมทั่วไป, ทันตกรรมบูรณะ & ทันตกรรมตกแต่ง <br>(General
@@ -1543,6 +1545,8 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-10 text-left">
                             <div class="modal-body">
+                                <h2 class="text-uppercase text-center">ทันตแพทย์สาขาบางนา</h2>
+                                <p class="item-intro text-muted text-center mb-5">Bangna Branch Team</p>
                                 <!-- General-->
                                 <div class="dentist-group">
                                     <h5 class="mb-4">ทันตกรรมทั่วไป, ทันตกรรมบูรณะ & ทันตกรรมตกแต่ง <br>(General
