Change about button

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
             </div>
             <div class="row">
                 <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#long-experience" aria-expanded="false" aria-controls="long-experience">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary fa-shadow"></i>
-                        <i class="fas fa-landmark fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <span class="btn btn-primary btn-large"><i class="fas fa-landmark"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">ประสบการณ์</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Experience</h4>
                     <div class="collapse" id="long-experience">
@@ -76,10 +73,7 @@
                     </div>
                 </div>
                 <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#high-quality" aria-expanded="false" aria-controls="high-quality">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary fa-shadow"></i>
-                        <i class="fas fa-thumbs-up fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <span class="btn btn-primary btn-large"><i class="fas fa-thumbs-up"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">คุณภาพ</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Quality</h4>
                     <div class="collapse" id="high-quality">
@@ -93,10 +87,7 @@
                     </div>
                 </div>
                 <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#expertise" aria-expanded="false" aria-controls="expertise">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary fa-shadow"></i>
-                        <i class="fas fa-user-md fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <span class="btn btn-primary btn-large"><i class="fas fa-user-md"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">เชี่ยวชาญ</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Proficient</h4>
                     <div class="collapse" id="expertise">
@@ -107,10 +98,7 @@
                     </div>
                 </div>
                 <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#convenience" aria-expanded="false" aria-controls="convenience">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary fa-shadow"></i>
-                        <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <span class="btn btn-primary btn-large"><i class="fas fa-shopping-cart"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">สะดวก</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Convenience</h4>
                     <div class="collapse" id="convenience">
