Add focus in About us

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h3 class="section-subheading-normal ">เกี่ยวกับเรา</h3>
             </div>
             <div class="row">
-                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#long-experience" aria-expanded="false" aria-controls="long-experience">
+                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#long-experience" aria-expanded="false" aria-controls="long-experience" tabindex="0">
                     <span class="btn btn-primary btn-large"><i class="fas fa-landmark"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">ประสบการณ์</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Experience</h4>
@@ -72,7 +72,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#high-quality" aria-expanded="false" aria-controls="high-quality">
+                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#high-quality" aria-expanded="false" aria-controls="high-quality" tabindex="0">
                     <span class="btn btn-primary btn-large"><i class="fas fa-thumbs-up"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">คุณภาพ</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Quality</h4>
@@ -86,7 +86,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#expertise" aria-expanded="false" aria-controls="expertise">
+                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#expertise" aria-expanded="false" aria-controls="expertise" tabindex="0">
                     <span class="btn btn-primary btn-large"><i class="fas fa-user-md"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">เชี่ยวชาญ</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Proficient</h4>
@@ -97,7 +97,7 @@
                         <p class="text-muted">Our qualified specialists, experienced dentists, and well-trained staffs are dedicated to provide the best quality of treatment and services to our patients. At PDC Dental Center, we treat you like our family members.</p>
                     </div>
                 </div>
-                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#convenience" aria-expanded="false" aria-controls="convenience">
+                <div class="about-button toTheTop col-lg-3 col-md-6 col-sm-12 text-center mb-3" data-toggle="collapse" href="#convenience" aria-expanded="false" aria-controls="convenience" tabindex="0">
                     <span class="btn btn-primary btn-large"><i class="fas fa-shopping-cart"></i></span>
                     <h4 class="about-button-heading mt-3 mb-0">สะดวก</h4>
                     <h4 class="about-button-subheading mt-0 mb-3 text-muted">Convenience</h4>
