--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="masthead-subheading">We treat you like our family</div>
             <div class="masthead-heading text-uppercase">PDC Dental Center</div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact Us</a>
+            <a class="btn btn-dark btn-xl text-uppercase js-scroll-trigger" href="#contact">Contact Us</a>
         </div>
     </header>
     <!-- About-->
@@ -2110,9 +2110,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Contact form JS-->
-    <script src="assets/mail/jqBootstrapValidation.js"></script>
-    <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
